--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
 
         <activity android:name=".Activities.AddNewTravel"/>
+        <activity android:name=".Activities.AddNewBucket"/>
     </application>
 
 </manifest>
