--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.y.travel_diary" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +22,7 @@
 
         <activity android:name=".Activities.AddNewTravel"/>
         <activity android:name=".Activities.AddNewBucket"/>
+        <activity android:name=".Activities.AddNewMap"/>
     </application>
 
 </manifest>
