--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -25,6 +26,7 @@
         <activity android:name="com.example.y.travel_diary.Activities.AddNewMap"/>
         <activity android:name="com.example.y.travel_diary.Activities.AddNewPlan"/>
         <activity android:name="com.example.y.travel_diary.Activities.EditOldPlan"/>
+        <receiver android:name="com.example.y.travel_diary.Activities.AlertReceiver"/>
     </application>
 
 </manifest>
