--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
@@ -25,6 +28,8 @@
         <activity android:name="com.example.y.travel_diary.Activities.AddNewTravel"/>
         <activity android:name="com.example.y.travel_diary.Activities.AddNewBucket"/>
         <activity android:name="com.example.y.travel_diary.Activities.AddNewMap"/>
+        <activity android:name="com.example.y.travel_diary.Activities.TakePhoto"/>
+        <activity android:name="com.example.y.travel_diary.Activities.ImagePop"/>
         <activity android:name="com.example.y.travel_diary.Activities.AddNewPlan"/>
         <activity android:name="com.example.y.travel_diary.Activities.EditOldPlan"/>
         <receiver android:name=".Utils.AlertReceiver"/>
